(library
   (name Rely)
   (public_name rely.lib)
   (preprocess (pps bisect_ppx))
   (libraries pastel.lib file-context-printer.lib unix junit re)
)
(copy_files# ../../shared-src/common/*)
; objectPrinter lives separately from Common for now because Common has an
; implicit dependency on Pastel which Console does not want. Common should
; ideally be split up into sub directories/packages which can be more precisely
; consumed
(include_subdirs unqualified)
